fix: don't shrink blog images on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1512,16 +1512,12 @@ select {
   margin-top: 6rem;
 }
 
-.mt-auto {
-  margin-top: auto;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-auto {
+  margin-top: auto;
 }
 
 .line-clamp-1 {
@@ -1749,6 +1745,14 @@ select {
 
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.shrink {
+  flex-shrink: 1;
 }
 
 .basis-1\/2 {
@@ -3546,6 +3550,10 @@ html.dark label.darkmode-container input[type="checkbox"] ~ .elements svg:nth-ch
     max-width: 28rem;
   }
 
+  .xl\:flex-1 {
+    flex: 1 1 0%;
+  }
+
   .xl\:translate-x-12 {
     --tw-translate-x: 3rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3586,6 +3594,12 @@ html.dark label.darkmode-container input[type="checkbox"] ~ .elements svg:nth-ch
 
   .xl\:gap-8 {
     gap: 2rem;
+  }
+
+  .xl\:truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .xl\:rounded-xl {
